tests/PhiCore/compile_failure/src/core/scope_ptr/not_null_construct_nullptr.fail.cpp
#include <phi/core/scope_ptr.hpp>

int main()
{
    phi::not_null_scope_ptr<int>(nullptr);
}
